# pqknn

./: .gitignore  Example.ipynb  LICENSE  README.md  pyproject.toml
product_quantization/: PQKNN.py  PQKNNBase.py  PQKNNClassifier.py  PQKNNRegressor.py  PQKNNTransformer.py  util.py
product_quatization/: PQKNN.py  __init__.py  util.py
